; ModuleID = '/home/carl/AnghaBench/freebsd/sys/mips/ingenic/extr_jz4780_rtc.c_jz4780_rtc_settime.c'
source_filename = "/home/carl/AnghaBench/freebsd/sys/mips/ingenic/extr_jz4780_rtc.c_jz4780_rtc_settime.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.timespec = type { i32 }
%struct.jz4780_rtc_softc = type { i32 }

@JZ_RTSR = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32, %struct.timespec*)* @jz4780_rtc_settime to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @jz4780_rtc_settime(i32 %0, %struct.timespec* %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca %struct.timespec*, align 8
  %5 = alloca %struct.jz4780_rtc_softc*, align 8
  store i32 %0, i32* %3, align 4
  store %struct.timespec* %1, %struct.timespec** %4, align 8
  %6 = load i32, i32* %3, align 4
  %7 = call %struct.jz4780_rtc_softc* @device_get_softc(i32 %6)
  store %struct.jz4780_rtc_softc* %7, %struct.jz4780_rtc_softc** %5, align 8
  %8 = load %struct.jz4780_rtc_softc*, %struct.jz4780_rtc_softc** %5, align 8
  %9 = load i32, i32* @JZ_RTSR, align 4
  %10 = load %struct.timespec*, %struct.timespec** %4, align 8
  %11 = getelementptr inbounds %struct.timespec, %struct.timespec* %10, i32 0, i32 0
  %12 = load i32, i32* %11, align 4
  %13 = call i32 @jz4780_rtc_write(%struct.jz4780_rtc_softc* %8, i32 %9, i32 %12)
  ret i32 %13
}

declare dso_local %struct.jz4780_rtc_softc* @device_get_softc(i32) #1

declare dso_local i32 @jz4780_rtc_write(%struct.jz4780_rtc_softc*, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
